# movie-reviews-bookmarking

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: app.py  models.py
api/common/: utils.py
api/core/: errors.py  exceptions.py
api/endpoints/: auth.py  folder.py  review.py
api/services/: auth.py  folder.py  review.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.js  utils.js
frontend/src/components/: FolderModal.js  Loading.js  Navbar.js  Notify.js  ReviewItem.js  SearchForm.js
frontend/src/containers/: App.js  Bookmark.js  ReviewList.js  SignIn.js  Signup.js
frontend/src/fun-redux/: actions.js  messages.js  store.js
frontend/src/fun-redux/reducers/: auth.js  folder.js  index.js  review.js
frontend/src/fun-redux/sagas/: auth.js  folder.js  index.js  review.js
frontend/src/hooks/: useToken.js
frontend/src/requests/: const.js  index.js
frontend/src/routes/: index.js  urls.js
migrations/: env.py
migrations/versions/: 5d285c1e6960_.py  f455797d0e3f_.py  fad12cf940fd_.py
