[tool.poetry]
name = "movie-reviews-bookmarking"
version = "0.1.0"
description = ""
authors = ["trananhkma <trananhkma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.6"
pyjwt = "^2.7.0"
flask-pydantic = "^0.11.0"
requests = "^2.31.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
